--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -16,6 +16,8 @@ Bugs:
             - We should probably just avoid allowing objects to be next to vertical ledges to prevent this.
 
     Cannot reproduce:
+        - PS5 controller some buttons don't work correctly.
+            - Works fine when testing on mac plugged in, need to test other configurations.
         - Fix bug: possible to defeat frost beast without getting reward somehow
             - Jun did this by firing fire arrows from the bottom of the screen.
                 - The door opened but he didn't get the reward, and the boss respawned on returning.
@@ -25,9 +27,7 @@ Bugs:
 
 Graphics Work:
     High Priority Graphics:
-        Ent Enemy
-            Growing Thorns attack
-            Shooting spikes attack (puff up and "explode" a ring or arc of thorns)
+
 
     Create icons for new items:
         Magic Beans
@@ -65,10 +65,6 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Re-check ps5+ps4 controllers.
-
-    - Don't show enemies taking damage in the other world unless you have spirit sight.
-
     - Staff needs to be added to the tower render children if it intersects with the platform
         - Probably should add a function to the tower itself that adds/removes objects as children if they are touching the platform.
         - Do this instead: Alternatively, maybe it is better to figure out a way to just draw the bottom portion of the tower on the ground layer?
@@ -97,6 +93,15 @@ Current tasks:
             - northwest spirit world
 
     - Reduce spirit sight radius to ~10px when in solid ground and disable astral projection.
+
+    - Brainstorm additional dialogue for characters:
+        - After the beasts escape/after the beasts are defeated.
+        - Holy City
+        - Grand Temple
+        - Waterfall Village
+        - Forest Village
+        - Jade City
+        - Helix
 
     - Make ledge styles clearer
         - Jump ledges should look flatter
