--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -65,10 +65,6 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Staff needs to be added to the tower render children if it intersects with the platform
-        - Probably should add a function to the tower itself that adds/removes objects as children if they are touching the platform.
-        - Do this instead: Alternatively, maybe it is better to figure out a way to just draw the bottom portion of the tower on the ground layer?
-
     - Add a sign to the pot room in War Temple before stairs to 3F
 
     - Remove instructions for equipping items, just rely on the overlay tutorials.
@@ -106,6 +102,8 @@ Current tasks:
     - Make ledge styles clearer
         - Jump ledges should look flatter
         - Blocked ledges should look more like walls.
+
+    - Fix you can wrap around the edges of the sky using cloud sommersault from the tower platform.
 
     - Make bells make the tink/block sound if you hit them with anything but the staff bonk.
 
@@ -354,13 +352,6 @@ Current tasks:
 
     - Ice mines are not cleaned up when defeating Guardian in Cocoon.
         - Same for long lasting lightning attacks
-
-    - Low priority Staff Tower Exterior
-        - Cosmetic: shadow is hidden by tower balcony
-            - Possible fix: make hero a renderChild of the balcony when the hero is standing on it.
-                - This would require defining when the hero is standing on it and then applying the same behavior
-                  to any other objects that can be on the balcony and then sorting them internally.
-                - Seems too complicated maybe we should find a different solution.
 
     - Fix push/pull interactions with ledges.
         - Minor issues:
