--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -28,7 +28,6 @@ Bugs:
 Graphics Work:
     High Priority Graphics:
         Running animation for MC
-        Thorns animation for mushroom enemy
         Summoner Statues for War Temple Boss
             The boss is now going to be statues of the former champions who were the summoners for the spirit beasts in the past.
         Large Statues for Flame and Frost Beasts
@@ -60,7 +59,7 @@ Graphics Work:
 
 Graphics to Implement:
     Add PS controller icons, detect xbox vs ps controller
-        - check gamepad id, navigator.getGamepads()[0].id to see if it contains string '45e' (vendor id for microsoft/xbox) or 'xInput' or 'xBox' (xbox/microsoft) or '54c' (vendor id for PS/sony); issue with Safari: wireless PS4 controller called 'Wireless Controller Extended Gamepad'
+        - check gamepad id, navigator.getGamepads()[0].id to see if it contains string '45e' (vendor id for microsoft/xbox) ormu 'xInput' or 'xBox' (xbox/microsoft) or '54c' (vendor id for PS/sony); issue with Safari: wireless PS4 controller called 'Wireless Controller Extended Gamepad'
     Add slam effects for the staff.
     Sweat animation when pulling on something you cannot move.
     Add Item Get Frame gfx/wukongimportantitem.png 20x28
@@ -69,6 +68,18 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Bug: Golem boss stopped moving when hands were killed during enrage phase.
+    - Bug: Guardian projection briefly appeared and died after defeating the boss.
+    - Picking up items when in the air. Don't pick them up until the player lands,
+    - Exit from peach cave water isn't frozen when entrance is frozen.
+    - Tile under heavy stones in Sky Palace looks wrong.
+        - Can't freeze cracked tiles next to heavy stones.
+    - Missing shadow next to key block in forge
+    - Snake is firing up a ledge when melting a floor block.
+    - Flame snake gets stuck on lava
+    - canCoverTile should check if an object is covering the ground and return false
+        - growing thorns effect should count as covering the ground (but be ignored by its own check).
+
     - Add new graphics
         - Add fog effect to the new forest zone.
         - New Cliff graphics probably require reviewing most zones for tiles that need adjustments.
