Fix peach cave water exit was not frozen from the interior. Fix loot objects could be grabbed in the middle of jumping down from cliffs.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -68,10 +68,6 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Bug: Golem boss stopped moving when hands were killed during enrage phase.
-    - Bug: Guardian projection briefly appeared and died after defeating the boss.
-    - Picking up items when in the air. Don't pick them up until the player lands,
-    - Exit from peach cave water isn't frozen when entrance is frozen.
     - Tile under heavy stones in Sky Palace looks wrong.
         - Can't freeze cracked tiles next to heavy stones.
     - Missing shadow next to key block in forge
@@ -82,6 +78,9 @@ Current tasks:
         - growing thorns effect should count as covering the ground (but be ignored by its own check).
     - hint tells me to get item in spirit world when only item left is money I have checked in the shop.
         = let's make sure shop items are counting as peaked.
+    - Exit from peach cave water doesn't render frozen correctly.
+    - Bug: Guardian projection briefly appeared and died after defeating the boss.
+    - Bug: Golem boss stopped moving when hands were killed during enrage phase.
 
     - Add new graphics
         - Add fog effect to the new forest zone.
