Fix a few minor bugs found during testing.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -68,16 +68,11 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Tile under heavy stones in Sky Palace looks wrong.
-        - Can't freeze cracked tiles next to heavy stones.
-    - Missing shadow next to key block in forge
-    - Snake is firing up a ledge when melting a floor block.
-    - Flame snake gets stuck on lava
     - Ice covers under bushes and then under cut bushses, seems wrong.
     - canCoverTile should check if an object is covering the ground and return false
         - growing thorns effect should count as covering the ground (but be ignored by its own check).
     - hint tells me to get item in spirit world when only item left is money I have checked in the shop.
-        = let's make sure shop items are counting as peaked.
+        - let's make sure shop items are counting as peaked.
     - Exit from peach cave water doesn't render frozen correctly.
     - Bug: Guardian projection briefly appeared and died after defeating the boss.
     - Bug: Golem boss stopped moving when hands were killed during enrage phase.
