--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -68,7 +68,6 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
-    - Reduce spirit sight radius to ~10px when in solid ground and disable astral projection.
 
     - Exit from peach cave water doesn't render frozen correctly.
 
@@ -84,6 +83,8 @@ Current tasks:
         - Forest Village
         - Jade City
         - Helix
+
+    - Investigate: Masked tiles are not inherited in the spirit world.
 
     - Draw wadingAnimation instead of enemy shadows for enemies near the ground over water.
 
