--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -68,6 +68,12 @@ Graphics to Implement:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Current tasks:
+    - Fix spirit sight is too transparent when the radius is small, add a separate value for tracking intensity.
+    - Support fog
+        - Render fog overlay for foggy sections
+            - Create a fill pattern and translate linearly based on fieldTime.
+            - Make sure it looks good across super tile transitions.
+        -
 
     - Exit from peach cave water doesn't render frozen correctly.
 
